--- a/templates/next/src/components/modules/Header/Header.module.css
+++ b/templates/next/src/components/modules/Header/Header.module.css
@@ -3,7 +3,8 @@
   align-items: center;
   justify-content: center;
   padding: 16px 24px;
-  border-bottom: 1px solid #3e454e;
+  border-bottom: 1px solid #3d3d3d;
+  background-color: #000000;
 }
 
 .nav {
